--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </div>
           <div class="price-album__item">
             <h5 class="price-album__item-title">Magic Avatars With 20% Off</h5>
-            <img class="price-album__item-img" src="./src/assets/images/Bitmap-3.svg">
+            <img class="price-album__item-img" src="./src/assets/images/Bitmap-3.jpg">
           </div>
         </div>
         <div class="price-offer__items">
